add sem2-overview and fix scripts

--- a/catalogue.html
+++ b/catalogue.html
@@ -28,10 +28,36 @@
 
       <nav class="nav-groups">
         <div class="nav-group overview-group">
-          <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+          <button class="nav-toggle" aria-expanded="false">
             <span>SEM 1 / OVERVIEW</span>
-            <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+            <span class="nav-toggle-symbol">+</span>
           </button>
+
+          <ul class="overview-weeks">
+            <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+            <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+            <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+            <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+            <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+            <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+            <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
+            <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
+            <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+            <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
+            <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
+            <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
+            <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+            <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
+            <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
+          </ul>
+        </div>
+
+        <div class="nav-group overview-group">
+          <button class="nav-toggle" aria-expanded="false">
+            <span>SEM 2 / OVERVIEW</span>
+            <span class="nav-toggle-symbol">+</span>
+          </button>
+
           <ul class="overview-weeks">
             <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
             <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
@@ -77,9 +103,12 @@
 
         <!-- LEFT COLUMN TEXT -->
         <section class="catalogue-sidebar">
-          <h1 style="font-size: 100px; line-height: 80px; font-weight: bold; letter-spacing: -10px; margin-top: 10px;">Catal<span style="color: red; font-size: 70px; margin-right: -12px;">◉</span>gue of Making</h1>
-          <p style="margin-top: -30px;">A working index of experiments (<strong>E</strong>) and prototypes (<strong>P</strong>).
-            Hover over the circles to reveal each making, and click to open its documentation page.<br>Use the filters in the bottom-left corner to isolate <em>Experiments</em> or <em>Prototypes</em>.
+          <h1 style="font-size: 100px; line-height: 80px; font-weight: bold; letter-spacing: -10px; margin-top: 10px;">
+            Catal<span style="color: red; font-size: 70px; margin-right: -12px;">◉</span>gue of Making</h1>
+          <p style="margin-top: -30px;">A working index of experiments (<strong>E</strong>) and prototypes
+            (<strong>P</strong>).
+            Hover over the circles to reveal each making, and click to open its documentation page.<br>Use the filters
+            in the bottom-left corner to isolate <em>Experiments</em> or <em>Prototypes</em>.
           </p>
         </section>
 
@@ -171,17 +200,22 @@
   <!-- ACCORDION JS -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      const group = document.querySelector(".overview-group");
-      const toggleBtn = document.getElementById("overviewToggle");
-      const symbol = document.getElementById("overviewSymbol");
+      document.querySelectorAll(".overview-group").forEach(group => {
+        const toggleBtn = group.querySelector(".nav-toggle");
+        const symbol = group.querySelector(".nav-toggle-symbol");
 
-      toggleBtn.setAttribute("aria-expanded", "false");
-      symbol.textContent = "+";
+        if (!toggleBtn || !symbol) return;
 
-      toggleBtn.addEventListener("click", () => {
-        const isOpen = group.classList.toggle("is-open");
-        toggleBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-        symbol.textContent = isOpen ? "−" : "+";
+        // init closed
+        group.classList.remove("is-open");
+        toggleBtn.setAttribute("aria-expanded", "false");
+        symbol.textContent = "+";
+
+        toggleBtn.addEventListener("click", () => {
+          const isOpen = group.classList.toggle("is-open");
+          toggleBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+          symbol.textContent = isOpen ? "−" : "+";
+        });
       });
     });
 
