--- a/week10.html
+++ b/week10.html
@@ -26,10 +26,11 @@
             <!-- NAVIGATION -->
             <nav class="nav-groups">
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 1 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
+
                     <ul class="overview-weeks">
                         <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
@@ -41,6 +42,31 @@
                         <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
                         <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
                         <li><a href="week10.html" class="active"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
+                    </ul>
+                </div>
+
+                <div class="nav-group overview-group">
+                    <button class="nav-toggle" aria-expanded="false">
+                        <span>SEM 2 / OVERVIEW</span>
+                        <span class="nav-toggle-symbol">+</span>
+                    </button>
+
+                    <ul class="overview-weeks">
+                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
                         <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
                         <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
                         <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
@@ -472,13 +498,22 @@
                 </div>
 
                 <div class="exp-block">
-                    <p>Like Lupi’s tapestry, I’m interested in <strong>how data turns experience into representation,</strong> how
-                        personal behaviours, preferences, histories can be <strong>abstracted into data,</strong> and how that
-                        representation can be visualised in a way that <em>retains meaning and emotional weight.</em> I’m also
-                        drawn to the <strong>scale-shift:</strong> from individual data to global patterns, from the granular to the
+                    <p>Like Lupi’s tapestry, I’m interested in <strong>how data turns experience into
+                            representation,</strong> how
+                        personal behaviours, preferences, histories can be <strong>abstracted into data,</strong> and
+                        how that
+                        representation can be visualised in a way that <em>retains meaning and emotional weight.</em>
+                        I’m also
+                        drawn to the <strong>scale-shift:</strong> from individual data to global patterns, from the
+                        granular to the
                         systemic.</p>
-                    <p><strong>The Room of Change</strong> demonstrates how a wall-wide tapestry can hold centuries of change; similarly,
-                        my work experiments aim to <strong>encode</strong> identity traits and actions into visual, material form, <strong>making visible what is usually hidden.</strong> The immersive, sensory quality of the installation inspires me to think beyond charts and graphs, to treat data as living environments, where viewers/participants don’t just observe, but inhabit, explore, reflect.</p>
+                    <p><strong>The Room of Change</strong> demonstrates how a wall-wide tapestry can hold centuries of
+                        change; similarly,
+                        my work experiments aim to <strong>encode</strong> identity traits and actions into visual,
+                        material form, <strong>making visible what is usually hidden.</strong> The immersive, sensory
+                        quality of the installation inspires me to think beyond charts and graphs, to treat data as
+                        living environments, where viewers/participants don’t just observe, but inhabit, explore,
+                        reflect.</p>
                 </div>
             </section>
 
@@ -495,12 +530,26 @@
 
             <section class="exp-row split" style="margin-top:-80px;">
                 <div class="exp-block">
-                    <p>Lupi's hand-drawn sketch of <strong>The Room of Change</strong> reveals more than just the layout of an installation. It exposes her entire way of thinking about how data can be transformed into an experiential, architectural narrative. The sketch breaks the exhibition down into time, themes, and layers, showing how the room wraps around the viewer as a continuous, evolving data story. Instead of treating data as static information, she designs it spatially: each coloured band becomes a timeline, each vertical slice a moment in history, and the entire room a living map of human and environmental change.</p>
+                    <p>Lupi's hand-drawn sketch of <strong>The Room of Change</strong> reveals more than just the layout
+                        of an installation. It exposes her entire way of thinking about how data can be transformed into
+                        an experiential, architectural narrative. The sketch breaks the exhibition down into time,
+                        themes, and layers, showing how the room wraps around the viewer as a continuous, evolving data
+                        story. Instead of treating data as static information, she designs it spatially: each coloured
+                        band becomes a timeline, each vertical slice a moment in history, and the entire room a living
+                        map of human and environmental change.</p>
                 </div>
 
                 <div class="exp-block">
-                    <p>For my <strong>Dissertation Pillar 3: Digital Exhibition Design,</strong> this sketch becomes an instructional model. It demonstrates how a complex system can be translated into a digestible visual plan. The quick annotations show how she frames data through relationships, categories, rather than numbers. This aligns strongly with my goal to translate invisible algorithmic processes into experiences that can be seen, felt, and navigated. Her sketch shows that an exhibition about systems, is structured around:</p>
-                    <p>• Clear spatial logic (what surrounds the user, what changes over time)<br>• Legible thematic bands (categories the audience can follow without explanation)<br>• A balance between micro and macro (zooming from individual stories to larger patterns)<br>• Embodied navigation (the visitor learns by walking, looking, comparing)</p>
+                    <p>For my <strong>Dissertation Pillar 3: Digital Exhibition Design,</strong> this sketch becomes an
+                        instructional model. It demonstrates how a complex system can be translated into a digestible
+                        visual plan. The quick annotations show how she frames data through relationships, categories,
+                        rather than numbers. This aligns strongly with my goal to translate invisible algorithmic
+                        processes into experiences that can be seen, felt, and navigated. Her sketch shows that an
+                        exhibition about systems, is structured around:</p>
+                    <p>• Clear spatial logic (what surrounds the user, what changes over time)<br>• Legible thematic
+                        bands (categories the audience can follow without explanation)<br>• A balance between micro and
+                        macro (zooming from individual stories to larger patterns)<br>• Embodied navigation (the visitor
+                        learns by walking, looking, comparing)</p>
                 </div>
             </section>
 
@@ -526,6 +575,28 @@
 
 
     <!-- ACCORDION SCRIPT -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            document.querySelectorAll(".overview-group").forEach(group => {
+                const toggleBtn = group.querySelector(".nav-toggle");
+                const symbol = group.querySelector(".nav-toggle-symbol");
+
+                if (!toggleBtn || !symbol) return;
+
+                // init closed
+                group.classList.remove("is-open");
+                toggleBtn.setAttribute("aria-expanded", "false");
+                symbol.textContent = "+";
+
+                toggleBtn.addEventListener("click", () => {
+                    const isOpen = group.classList.toggle("is-open");
+                    toggleBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+                    symbol.textContent = isOpen ? "−" : "+";
+                });
+            });
+        });
+    </script>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
