--- a/week13.html
+++ b/week13.html
@@ -26,10 +26,11 @@
             <!-- NAVIGATION -->
             <nav class="nav-groups">
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 1 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
+
                     <ul class="overview-weeks">
                         <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
@@ -44,6 +45,31 @@
                         <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
                         <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
                         <li><a href="week13.html" class="active"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
+                    </ul>
+                </div>
+
+                <div class="nav-group overview-group">
+                    <button class="nav-toggle" aria-expanded="false">
+                        <span>SEM 2 / OVERVIEW</span>
+                        <span class="nav-toggle-symbol">+</span>
+                    </button>
+
+                    <ul class="overview-weeks">
+                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
                         <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
                         <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
                     </ul>
@@ -163,13 +189,27 @@
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split" style="margin-top: -100px;">
                 <div class="exp-block">
-                    <p>The title itself reads like a fleeting moment, a casual observation that becomes unsettling upon second thought. The “dead rat” functions as both a literal object and a metaphor for urban anxieties, decay, and the unnoticed elements that populate Singapore’s hyper-clean visual landscape.</p>
-                    <p>Leow often uses such motifs to reveal how personal perception interacts with public space. The artwork captures the tension between what is seen, what is assumed, and what is projected onto the environment. The ambiguity invites viewers to consider how quickly the mind fills in meaning, how memory distorts, and how the mundane can suddenly become charged with symbolic weight.</p>
+                    <p>The title itself reads like a fleeting moment, a casual observation that becomes unsettling upon
+                        second thought. The “dead rat” functions as both a literal object and a metaphor for urban
+                        anxieties, decay, and the unnoticed elements that populate Singapore’s hyper-clean visual
+                        landscape.</p>
+                    <p>Leow often uses such motifs to reveal how personal perception interacts with public space. The
+                        artwork captures the tension between what is seen, what is assumed, and what is projected onto
+                        the environment. The ambiguity invites viewers to consider how quickly the mind fills in
+                        meaning, how memory distorts, and how the mundane can suddenly become charged with symbolic
+                        weight.</p>
                 </div>
 
                 <div class="exp-block">
-                    <p>A peer pointed this out during feedback and suggested I explore exhibition spaces like this, liminal zones where people don’t expect “art,” but where meaning can be more sharply felt. Her comment made me reconsider the spatial possibilities for my own pillar on digital exhibition design. Instead of defaulting to white-cube or screen-based environments, perhaps the power lies in contextual placement, showing algorithmic processes in unexpected spaces that heighten their relevance.</p>
-                    <p>This carpark exhibition becomes a reminder that the space itself can carry conceptual weight. It prompts me to rethink how my future installations can use location not as a backdrop, but as part of the narrative.</p>
+                    <p>A peer pointed this out during feedback and suggested I explore exhibition spaces like this,
+                        liminal zones where people don’t expect “art,” but where meaning can be more sharply felt. Her
+                        comment made me reconsider the spatial possibilities for my own pillar on digital exhibition
+                        design. Instead of defaulting to white-cube or screen-based environments, perhaps the power lies
+                        in contextual placement, showing algorithmic processes in unexpected spaces that heighten their
+                        relevance.</p>
+                    <p>This carpark exhibition becomes a reminder that the space itself can carry conceptual weight. It
+                        prompts me to rethink how my future installations can use location not as a backdrop, but as
+                        part of the narrative.</p>
                 </div>
             </section>
 
@@ -187,6 +227,28 @@
 
 
     <!-- ACCORDION SCRIPT -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            document.querySelectorAll(".overview-group").forEach(group => {
+                const toggleBtn = group.querySelector(".nav-toggle");
+                const symbol = group.querySelector(".nav-toggle-symbol");
+
+                if (!toggleBtn || !symbol) return;
+
+                // init closed
+                group.classList.remove("is-open");
+                toggleBtn.setAttribute("aria-expanded", "false");
+                symbol.textContent = "+";
+
+                toggleBtn.addEventListener("click", () => {
+                    const isOpen = group.classList.toggle("is-open");
+                    toggleBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+                    symbol.textContent = isOpen ? "−" : "+";
+                });
+            });
+        });
+    </script>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
