--- a/experiment-e2.html
+++ b/experiment-e2.html
@@ -26,10 +26,36 @@
             <!-- NAVIGATION -->
             <nav class="nav-groups">
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 1 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
+
+                    <ul class="overview-weeks">
+                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
+                    </ul>
+                </div>
+
+                <div class="nav-group overview-group">
+                    <button class="nav-toggle" aria-expanded="false">
+                        <span>SEM 2 / OVERVIEW</span>
+                        <span class="nav-toggle-symbol">+</span>
+                    </button>
+
                     <ul class="overview-weeks">
                         <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
@@ -89,8 +115,11 @@
                         &lt Introduction >
                     </h1>
                     <p>
-                        <p>I started by asking: what really happens when our words meet a system? In my research, I kept returning to how algorithms read patterns and signals, and reduce human data inputs by reducing rich behaviours into simplified categories, metrics, and features. What if I made that reduction visible? That led me to use ASCII as a way to expose this reduction.</p>
-                        <p><strong>Text Reduction</strong> converts what users type into shifting arrangements of
+                    <p>I started by asking: what really happens when our words meet a system? In my research, I kept
+                        returning to how algorithms read patterns and signals, and reduce human data inputs by reducing
+                        rich behaviours into simplified categories, metrics, and features. What if I made that reduction
+                        visible? That led me to use ASCII as a way to expose this reduction.</p>
+                    <p><strong>Text Reduction</strong> converts what users type into shifting arrangements of
                         circles, blocks,
                         triangles, and lines. Using ASCII, the computer’s earliest visual alphabet to reinterpret each
                         word based on its structure:<br><br>⑴ Short Words (Circles): <strong><mark>o O @
