--- a/prototype-p2.html
+++ b/prototype-p2.html
@@ -26,10 +26,36 @@
             <!-- NAVIGATION -->
             <nav class="nav-groups">
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 1 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
+
+                    <ul class="overview-weeks">
+                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
+                    </ul>
+                </div>
+
+                <div class="nav-group overview-group">
+                    <button class="nav-toggle" aria-expanded="false">
+                        <span>SEM 2 / OVERVIEW</span>
+                        <span class="nav-toggle-symbol">+</span>
+                    </button>
+
                     <ul class="overview-weeks">
                         <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
@@ -89,16 +115,18 @@
                         &lt Introduction >
                     </h1>
                     <p>
-                        <p>What remains of our gestures once the system has finished interpreting us?</p>
-                        <p>This prototype began with that question, where I learnt how our expressions are converted into features, coordinates, and labelled datasets. I wanted to expose that hidden pipeline and turn the invisible work of datafication into an experience users could actually witness.</p>
-                        <strong>Encode Shape</strong> transforms five hand-drawn gestures into into encoded shapes. Each
-                        drawing is
-                        <strong>reduced</strong> through a sequence of algorithmic transformations from <em>stroke to
-                            pixels, dots, and text.</em>
-                        The system mimics how platforms record, normalise, and classify user behaviour. What begins as
-                        personal expression is <strong>flattened into machine-readable traces</strong>. It visualises
-                        the core idea of
-                        this research project that <strong>our gestures are never "just gestures"</strong> .
+                    <p>What remains of our gestures once the system has finished interpreting us?</p>
+                    <p>This prototype began with that question, where I learnt how our expressions are converted into
+                        features, coordinates, and labelled datasets. I wanted to expose that hidden pipeline and turn
+                        the invisible work of datafication into an experience users could actually witness.</p>
+                    <strong>Encode Shape</strong> transforms five hand-drawn gestures into into encoded shapes. Each
+                    drawing is
+                    <strong>reduced</strong> through a sequence of algorithmic transformations from <em>stroke to
+                        pixels, dots, and text.</em>
+                    The system mimics how platforms record, normalise, and classify user behaviour. What begins as
+                    personal expression is <strong>flattened into machine-readable traces</strong>. It visualises
+                    the core idea of
+                    this research project that <strong>our gestures are never "just gestures"</strong> .
                     </p>
                 </div>
             </section>
@@ -180,17 +208,22 @@
     <!-- ACCORDION SCRIPT -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const group = document.querySelector(".overview-group");
-            const btn = document.getElementById("overviewToggle");
-            const symbol = document.getElementById("overviewSymbol");
+            document.querySelectorAll(".overview-group").forEach(group => {
+                const toggleBtn = group.querySelector(".nav-toggle");
+                const symbol = group.querySelector(".nav-toggle-symbol");
 
-            btn.setAttribute("aria-expanded", "false");
-            symbol.textContent = "+";
+                if (!toggleBtn || !symbol) return;
 
-            btn.addEventListener("click", () => {
-                const isOpen = group.classList.toggle("is-open");
-                btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-                symbol.textContent = isOpen ? "−" : "+";
+                // init closed
+                group.classList.remove("is-open");
+                toggleBtn.setAttribute("aria-expanded", "false");
+                symbol.textContent = "+";
+
+                toggleBtn.addEventListener("click", () => {
+                    const isOpen = group.classList.toggle("is-open");
+                    toggleBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+                    symbol.textContent = isOpen ? "−" : "+";
+                });
             });
         });
     </script>
