--- a/prototype-p4.html
+++ b/prototype-p4.html
@@ -26,10 +26,36 @@
             <!-- NAVIGATION -->
             <nav class="nav-groups">
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 1 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
+
+                    <ul class="overview-weeks">
+                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
+                    </ul>
+                </div>
+
+                <div class="nav-group overview-group">
+                    <button class="nav-toggle" aria-expanded="false">
+                        <span>SEM 2 / OVERVIEW</span>
+                        <span class="nav-toggle-symbol">+</span>
+                    </button>
+
                     <ul class="overview-weeks">
                         <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
@@ -89,7 +115,12 @@
                         &lt Introduction >
                     </h1>
                     <p>How much of a person can a machine reconstruct from the smallest digital traces?</p>
-                    <p>ID://ASCII examines how algorithmic identities are constructed from the smallest actions we make online. In this experiment, I set up a simple constraint: users must choose three ASCII characters, and those characters become the only vocabulary the system is allowed to use. This limitation mirrors the quiet but powerful ways algorithms construct our digital identities from small, seemingly insignificant choices of tiny inputs such as likes, follows, pauses, scrolls, become the foundations of how systems “see” us.</p>
+                    <p>ID://ASCII examines how algorithmic identities are constructed from the smallest actions we make
+                        online. In this experiment, I set up a simple constraint: users must choose three ASCII
+                        characters, and those characters become the only vocabulary the system is allowed to use. This
+                        limitation mirrors the quiet but powerful ways algorithms construct our digital identities from
+                        small, seemingly insignificant choices of tiny inputs such as likes, follows, pauses, scrolls,
+                        become the foundations of how systems “see” us.</p>
                     <p>
                         <strong>Reconstructed Self</strong> displays three parallel images of the user: the live camera
                         feed, the
@@ -304,17 +335,22 @@
     <!-- ACCORDION SCRIPT -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const group = document.querySelector(".overview-group");
-            const btn = document.getElementById("overviewToggle");
-            const symbol = document.getElementById("overviewSymbol");
+            document.querySelectorAll(".overview-group").forEach(group => {
+                const toggleBtn = group.querySelector(".nav-toggle");
+                const symbol = group.querySelector(".nav-toggle-symbol");
 
-            btn.setAttribute("aria-expanded", "false");
-            symbol.textContent = "+";
+                if (!toggleBtn || !symbol) return;
 
-            btn.addEventListener("click", () => {
-                const isOpen = group.classList.toggle("is-open");
-                btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-                symbol.textContent = isOpen ? "−" : "+";
+                // init closed
+                group.classList.remove("is-open");
+                toggleBtn.setAttribute("aria-expanded", "false");
+                symbol.textContent = "+";
+
+                toggleBtn.addEventListener("click", () => {
+                    const isOpen = group.classList.toggle("is-open");
+                    toggleBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+                    symbol.textContent = isOpen ? "−" : "+";
+                });
             });
         });
     </script>
