--- a/week11.html
+++ b/week11.html
@@ -26,10 +26,11 @@
             <!-- NAVIGATION -->
             <nav class="nav-groups">
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 1 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
+
                     <ul class="overview-weeks">
                         <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
@@ -42,6 +43,31 @@
                         <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
                         <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
                         <li><a href="week11.html" class="active"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
+                    </ul>
+                </div>
+
+                <div class="nav-group overview-group">
+                    <button class="nav-toggle" aria-expanded="false">
+                        <span>SEM 2 / OVERVIEW</span>
+                        <span class="nav-toggle-symbol">+</span>
+                    </button>
+
+                    <ul class="overview-weeks">
+                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
                         <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
                         <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
                         <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
@@ -531,7 +557,8 @@
                         system. I had a lot of issues trying to make <strong>ml5.handpose</strong> work. Thankfully,
                         <strong>ChatGPT</strong> helped to set it up properly. Using the pixel-scan method, each letter
                         was broken down into hundreds of small 3D boxes, allowing the sentence to behave like a
-                        constellation of data points suspended in space.</p>
+                        constellation of data points suspended in space.
+                    </p>
                     <p>I gave these particles rules using two states:</p>
                     <p><strong>⑴ Palm Open</strong>: particles are pulled toward their "home" position to reveal the
                         sentence</p>
@@ -562,7 +589,8 @@
                 <div class="exp-block">
                     <p>This process faced many <strong><em>crash-outs.</em></strong></p>
                     <p>First, hand-pose detection was highly sensitive. Small differences in lighting, hand distance, or
-                        camera angle caused the system to misread <strong>open</strong> vs. <strong>closed</strong> states. This made the interaction
+                        camera angle caused the system to misread <strong>open</strong> vs. <strong>closed</strong>
+                        states. This made the interaction
                         unreliable until I stabilised the distance thresholds and smoothed detection through repeated
                         frame checks.</p>
                     <p>Another difficulty was particle behaviour: early attempts caused the particles to jitter, explode
@@ -587,6 +615,28 @@
 
 
     <!-- ACCORDION SCRIPT -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            document.querySelectorAll(".overview-group").forEach(group => {
+                const toggleBtn = group.querySelector(".nav-toggle");
+                const symbol = group.querySelector(".nav-toggle-symbol");
+
+                if (!toggleBtn || !symbol) return;
+
+                // init closed
+                group.classList.remove("is-open");
+                toggleBtn.setAttribute("aria-expanded", "false");
+                symbol.textContent = "+";
+
+                toggleBtn.addEventListener("click", () => {
+                    const isOpen = group.classList.toggle("is-open");
+                    toggleBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+                    symbol.textContent = isOpen ? "−" : "+";
+                });
+            });
+        });
+    </script>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
