--- a/week12.html
+++ b/week12.html
@@ -26,10 +26,11 @@
             <!-- NAVIGATION -->
             <nav class="nav-groups">
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 1 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
+
                     <ul class="overview-weeks">
                         <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
@@ -43,6 +44,31 @@
                         <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
                         <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
                         <li><a href="week12.html" class="active"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
+                    </ul>
+                </div>
+
+                <div class="nav-group overview-group">
+                    <button class="nav-toggle" aria-expanded="false">
+                        <span>SEM 2 / OVERVIEW</span>
+                        <span class="nav-toggle-symbol">+</span>
+                    </button>
+
+                    <ul class="overview-weeks">
+                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="week5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="week6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="week7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="week8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="week9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="week10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="week11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
                         <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
                         <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
                         <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-14</a></li>
@@ -71,7 +97,8 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="assets/videos/w12-hero-1.mp4" autoplay muted loop playsinline style="border-radius: 0px; border: 0;"></video>
+                <video src="assets/videos/w12-hero-1.mp4" autoplay muted loop playsinline
+                    style="border-radius: 0px; border: 0;"></video>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -86,7 +113,7 @@
                             style="width:100%; height:100%; object-fit:cover; flex:1; transform-origin:center; margin-bottom:20px; border: 0; transform: scale(1.0); margin-bottom: 30px;"></video>
                     </div> -->
                     <p style="margin-top: 0px;"><strong><em>What remains of our gestures once the system has finished
-                            interpreting us?</em></strong>
+                                interpreting us?</em></strong>
                     </p>
                     <p>This prototype began with that question, where I learnt how our expressions are converted into
                         features, coordinates, and labelled datasets. I wanted to expose that hidden pipeline and turn
@@ -110,7 +137,7 @@
                         reduction: the way organic, expressive human gestures are continuously flattened into
                         abstractions so they can be categorised, sorted, and fed back into algorithmic systems.</p>
                     <p><em>Read more about the algorithmic process breakdown in <strong>Prototype 2's Catalogue of
-                            Making.</strong></em></p>
+                                Making.</strong></em></p>
                     <!-- BUTTON ALIGNED TO LEFT, AT BOTTOM -->
                     <a href="https://editor.p5js.org/ethel.limpy/full/C35BN7BaG" class="launch-btn"
                         style="font-size: 14px; padding:6px 14px; margin-top:20px; display:inline-block;"
@@ -238,9 +265,19 @@
                 </div>
 
                 <div class="exp-block">
-                    <p><strong>⑴ Managing Multiple Phases in One System</strong><br> I devoted many hours trying to coordinate the four different states: <strong>countdown → draw → replay → reduction.</strong> Each phase required its own timing logic, UI behaviour, and rendering rules. I went through rounds of iterations to debug and ensure that the transitions didn't break.</p>
-                    <p><strong>⑵ Capturing User Strokes Accurately</strong><br> The strokes were not drawing accurately, it was laggy and off-alignment. I had to seek <strong>ChatGPT's</strong> help to ensure that the alignment is accurate. They overlay canvas has to store every point with timestamps, and avoid "breaks" in the line when users drew too quickly or too slowly.</p>
-                    <p><strong>⑶ Replaying All Shapes Simultaneously</strong><br> Initially, after users complete their drawings, it will just appear on the screen. However, after much though, I added the stroke replay function to make the "raw human input" visible before the system intervenes. Replaying them in sync required mapping thousands of timestamped points into a fixed 2-second animation window. It was challenging to ensure the shapes didn't "jump" or distort during replay.</p>
+                    <p><strong>⑴ Managing Multiple Phases in One System</strong><br> I devoted many hours trying to
+                        coordinate the four different states: <strong>countdown → draw → replay → reduction.</strong>
+                        Each phase required its own timing logic, UI behaviour, and rendering rules. I went through
+                        rounds of iterations to debug and ensure that the transitions didn't break.</p>
+                    <p><strong>⑵ Capturing User Strokes Accurately</strong><br> The strokes were not drawing accurately,
+                        it was laggy and off-alignment. I had to seek <strong>ChatGPT's</strong> help to ensure that the
+                        alignment is accurate. They overlay canvas has to store every point with timestamps, and avoid
+                        "breaks" in the line when users drew too quickly or too slowly.</p>
+                    <p><strong>⑶ Replaying All Shapes Simultaneously</strong><br> Initially, after users complete their
+                        drawings, it will just appear on the screen. However, after much though, I added the stroke
+                        replay function to make the "raw human input" visible before the system intervenes. Replaying
+                        them in sync required mapping thousands of timestamped points into a fixed 2-second animation
+                        window. It was challenging to ensure the shapes didn't "jump" or distort during replay.</p>
                 </div>
             </section>
 
@@ -269,6 +306,28 @@
 
 
     <!-- ACCORDION SCRIPT -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            document.querySelectorAll(".overview-group").forEach(group => {
+                const toggleBtn = group.querySelector(".nav-toggle");
+                const symbol = group.querySelector(".nav-toggle-symbol");
+
+                if (!toggleBtn || !symbol) return;
+
+                // init closed
+                group.classList.remove("is-open");
+                toggleBtn.setAttribute("aria-expanded", "false");
+                symbol.textContent = "+";
+
+                toggleBtn.addEventListener("click", () => {
+                    const isOpen = group.classList.toggle("is-open");
+                    toggleBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+                    symbol.textContent = isOpen ? "−" : "+";
+                });
+            });
+        });
+    </script>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
