--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="s2-week1.html"><strong>W1</strong> : Progress Review</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
                         <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
                         <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
