--- a/s2-week1.html
+++ b/s2-week1.html
@@ -6,6 +6,9 @@
     <title>A-I: Week 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 
@@ -26,12 +29,12 @@
             <!-- NAVIGATION -->
             <nav class="nav-groups">
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 1 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
                     <ul class="overview-weeks">
-                        <li><a href="week1.html" class="active"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week1.html"><strong>W1</strong> : Prologue</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
                         <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
                         <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
@@ -50,12 +53,12 @@
                 </div>
 
                 <div class="nav-group overview-group">
-                    <button class="nav-toggle" id="overviewToggle" aria-expanded="false">
+                    <button class="nav-toggle" aria-expanded="false">
                         <span>SEM 2 / OVERVIEW</span>
-                        <span class="nav-toggle-symbol" id="overviewSymbol">+</span>
+                        <span class="nav-toggle-symbol">+</span>
                     </button>
                     <ul class="overview-weeks">
-                        <li><a href="week1.html" class="active"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="week1.html" class="active"><strong>W1</strong> : Progress Review</a></li>
                         <li><a href="week2.html"><strong>W2</strong> : Atelier Presentation</a></li>
                         <li><a href="week3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
                         <li><a href="week4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
@@ -90,76 +93,85 @@
         <main class="right-panel">
 
             <section class="catalogue-sidebar">
-                <h1><strong>Week 1</strong> / Prologue</h1>
+                <h1><strong>Week 1</strong> / Progress Review</h1>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <h3><strong>Beginning of the Trajectory</strong></h3>
+                    <h3><strong>Identifying Gaps & Direction</strong></h3>
                 </div>
 
                 <div class="exp-block">
-                    <p>There is one app that captivates millions daily. Can you guess what app that is? It's TikTok.
-                        <br><br>In
-                        Year 2, I explored this phenomenon in my academic essay <strong><em>"TikTok as Contemporary
-                                Media
-                                Spectacle"</em></strong>. I analysed TikTok through three aspects:
+                    <p>Over the holidays, I received detailed feedback from my lecturers on both my dissertation and
+                        graduation project. This week's consultation provided an opportunity to revisit these comments
+                        together and unpack them more clearly. Through discussion, we clarified key issues around my
+                        <strong>third pillar: exhibition design</strong>, coherence, and how the work should come
+                        together moving forward.
                     </p>
-                    <p>
-                        <strong>⑴ Algorithmic Control:</strong> shapes feeds and fuel filter bubbles, misinformation,
-                        and viral trends<br>
-                        <strong>⑵ Mediated Reality:</strong> curated content and livestreams blur the line between real
-                        and hyperreal<br>
-                        <strong>⑶ Alienation:</strong> users commodify their identities and chase idealised personas at
-                        the expense of authenticity
-                    </p>
-                    <p>While writing this paper, I started to see how with the constant exposure of media, it causes us
-                        to be trapped in a mediated environment that is controlled by <strong>algorithms</strong>,
-                        proving that the social media apps we use are not just a platform. It is a powerful
-                        manifestation of the media spectacle in our digital age.</p>
                 </div>
             </section>
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/media-spectacle.jpg" alt="">
-                <figcaption style="font-size: 12px; text-align: left;"><strong>The Society of the Spectacle</strong><em>
-                        Guy Debord, 1973</em></figcaption>
+                <a href="https://www.guggenheim.org/exhibition/gary-hill" target="_blank"
+                    style="text-decoration: none; color: inherit; display:block;">
+
+                    <video src="assets/videos/experimental-art.mp4" autoplay loop muted playsinline
+                        style="width:100%; height:100%; object-fit:cover;">
+                    </video>
+
+                    <figcaption style="font-size: 12px; text-align: left;">
+                        <strong>Only the Young: Experimental Art in Korea, 1960s–1970s</strong>
+                        <em>Guggenheim New York</em>
+                    </figcaption>
+
+                </a>
             </section>
 
-            <!-- ROW 3 — IMAGE LEFT / TEXT RIGHT -->
-            <section class="exp-row split">
-                <!-- VIDEO BLOCK -->
-                <div class="exp-block" style="height:420px; overflow:hidden; display:flex; flex-direction:column;">
-                    <div style="flex:1; overflow:hidden;">
-                        <video src="assets/videos/w1-1.mp4" autoplay loop muted playsinline
-                            style="width:100%; height:100%; object-fit:cover; transform:scale(1.1);">
-                        </video>
-                    </div>
-                    <figcaption style="font-size:12px; margin-top:10px;">
-                        <strong>The Social Dilemma</strong> <em>Netflix, 2020</em>
-                    </figcaption>
+            <section class="exp-row split" style="margin-top:-80px;">
+                <div class="exp-block">
+                    <h3><strong>"Chapters"</strong></h3>
+                    <p>During the consultation, the idea of “chapters” was clarified as a metaphor rather than a
+                        structural requirement. Instead of referring to literal book chapters, Andreas described it as a
+                        shelf with multiple compartments, where each compartment represents an experiment. The issue was
+                        not the individual works, but the absence of a clear connective logic that allows them to
+                        function as a coherent whole. This reframing made it evident that my experiments need to be
+                        understood relationally; each one linking to the next under a single unifying pillar.</p>
                 </div>
 
                 <div class="exp-block">
-                    <h2><strong>if(time==3am){emo_time();}</strong></h2>
-                    <p>Before bed, I always end up scrolling TikTok. Over time, I noticed a pattern: late at night, my
-                        feed shifts into heavier, more emotional content. It showed me videos that are more reflective
-                        or personal. However, during the day, the difference is constrasting. The same feed becomes
-                        energetic, loud, and comedic. It feels like the algorithm knows me a little too well, as it if
-                        knows exactly how I feel in that moment.</p>
-                    <p>It made me wonder: <strong><em>how does my feed know exactly how I feel?</em></strong> The timing
-                        is uncanny. Sometimes the continuous scrolling and consumption of the videos push me deeper into
-                        an existential spiral. Even on Instagram, I can talk to my friends about something in person,
-                        and suddenly it appears on my feed as an ad. The more it happens, the more it felt like the
-                        platforms are <strong>sensing, predicting, and responding</strong> to my emotional state in ways
-                        I <em>never explicitly shared</em>.</p>
-                    <p>
-                        This critical reflection sparked my drive to intern at TikTok, allowing me to work closer with
-                        the product itself, and to deepen my understanding of the algorithmic influence. <br><br>With
-                        that, this research project <strong>"A-I: Algorithmic Identities"</strong> was born.
-                    </p>
+                    <h3><strong>Framework</strong></h3>
+                    <p>Exhibition design emerged as a useful framework for this, not as a mandatory final outcome, but
+                        as a way to think through sequencing, narrative, and how viewers move from one experiment to
+                        another. While the experiments from Semester 1 may not yet qualify as exhibition-ready works,
+                        they form critical groundwork. The focus moving forward is not to rework them, but to extract
+                        what they reveal and use those insights to inform a conceptual shift towards an
+                        exhibition-oriented direction.</p>
+                </div>
+            </section>
+
+            <section class="exp-row split" style="margin-top:-80px;">
+                <div class="exp-block">
+                    <h3><strong>Dissertation Planning</strong></h3>
+                    <p>Given the limited timeframe, the dissertation now functions less as documentation of a completed
+                        exhibition and more as a process of planning and articulation. The first half focuses on
+                        conceptualising the exhibition framework, while the second half addresses how this framework
+                        might take shape through design. Rather than attempting to resolve all transitions, the emphasis
+                        is on developing one new prototype in Semester 2 as a transition piece, positioned alongside
+                        Semester 1 works to signal this shift. The discussion section therefore looks both backward and
+                        forward: reflecting on how earlier experiments inform future making, and outlining how these
+                        learnings lead towards an exhibition proposal.</p>
+                </div>
+
+                <div class="exp-block">
+                    <h3><strong>Exhibition Proposal</strong></h3>
+                    <p>Importantly, this proposal does not need to be realised; it can exist as a speculative
+                        contribution that could sit within a larger exhibition on algorithms, rather than a standalone
+                        curated show. Framing my work as a contributor rather than a curator significantly narrows the
+                        scope and strengthens focus. Moving into the next phase, especially if working with physical
+                        materials, the priority is to strengthen the conceptual grounding of the work: answering why a
+                        material, interaction, or form is chosen before considering technological execution.</p>
                 </div>
             </section>
 
@@ -180,36 +192,45 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
-            /* Get current week number from filename */
-            const current = parseInt(window.location.pathname.match(/week(\d+)\.html/)[1]);
+            /* Detect SEM 2 week number from filename */
+            const match = window.location.pathname.match(/s2-week(\d+)\.html/);
+            const current = match ? parseInt(match[1], 10) : 1;
 
-            /* Assign previous & next */
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
+            const topBtn = document.getElementById("topBtn");
 
-            /* Load previous week if exists */
-            prev.addEventListener("click", () => {
-                if (current > 1) {
-                    window.location.href = `week${current - 1}.html`;
-                }
-            });
+            if (prev) {
+                prev.addEventListener("click", () => {
+                    if (current > 1) {
+                        window.location.href = `s2-week${current - 1}.html`;
+                    }
+                });
+            }
 
-            /* Load next week if exists (assuming week12 max) */
-            next.addEventListener("click", () => {
-                if (current < 12) {
-                    window.location.href = `week${current + 1}.html`;
-                }
-            });
+            if (next) {
+                next.addEventListener("click", () => {
+                    window.location.href = `s2-week${current + 1}.html`;
+                });
+            }
 
-            /* Scroll to top */
-            document.getElementById("topBtn").addEventListener("click", () => {
-                window.scrollTo({ top: 0, behavior: "smooth" });
-            });
+            if (topBtn) {
+                topBtn.addEventListener("click", () => {
+                    window.scrollTo({ top: 0, behavior: "smooth" });
+                });
+            }
 
-            const group = document.querySelector(".overview-group");
-            const btn = document.getElementById("overviewToggle");
-            const symbol = document.getElementById("overviewSymbol");
+        });
 
+        /* ✅ SEM 1 + SEM 2 overview accordions */
+        document.querySelectorAll(".overview-group").forEach(group => {
+            const btn = group.querySelector(".nav-toggle");
+            const symbol = group.querySelector(".nav-toggle-symbol");
+
+            if (!btn || !symbol) return;
+
+            // init closed
+            group.classList.remove("is-open");
             btn.setAttribute("aria-expanded", "false");
             symbol.textContent = "+";
 
@@ -220,6 +241,26 @@
             });
         });
     </script>
+
+    <script>
+        const triggers = document.querySelectorAll(".lightbox-trigger");
+        const lightbox = document.getElementById("lightbox");
+        const lightboxImg = document.getElementById("lightbox-img");
+
+        triggers.forEach(img => {
+            img.addEventListener("click", () => {
+                lightboxImg.src = img.src;
+                lightbox.style.display = "flex";
+            });
+        });
+
+        // click anywhere on the overlay (including image) to close
+        lightbox.addEventListener("click", () => {
+            lightbox.style.display = "none";
+            lightboxImg.src = "";
+        });
+    </script>
+
 
 </body>
 
